# Rust_SNN

./: Cargo.toml  README.md
simulation/: inputInterface.py  inputSpikes.txt  mnist.py  outputCounters.txt  outputInterface.py  parameters.py  runSimulation.py
src/: lib.rs  main.rs
src/models/: mod.rs
src/models/neuron/: lif.rs  mod.rs
src/simulation/: inputInterface.rs  inputSpikes.txt  mnist.rs  mod.rs  outputCounters.txt  outputInterface.rs
src/snn/: dyn_snn.rs  layer.rs  mod.rs  neuron.rs  processor.rs  snn.rs
src/snn/builders/: builder.rs  dyn_builder.rs  mod.rs
tests/: tests_process.rs  tests_snn_builder.rs  tests_snn_dyn_builder.rs
