[package]
name = "pds_snn"
version = "1.0.0"
edition = "2021"
default-run = "pds_snn"  # 改为默认运行 pds_snn（或保留 verbose_demo，根据需要）

[[bin]]
name = "pds_snn"
path = "src/bin/demo.rs"  # 假设 demo.rs 是 pds_snn 的入口

[[bin]]
name = "verbose_demo"
path = "src/bin/verbose_demo.rs"  # verbose_demo 的入口

[dependencies]
